--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,199 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 240 19% 16%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 19% 16%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
+    --primary: 8 99% 67%;
+    --primary-foreground: 300 0% 100%;
+    --secondary: 240 19% 16%;
+    --secondary-foreground: 300 0% 100%;
+    --tertiary: 27 82% 98%;
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 237 13% 40%;
+    --accent: 237 9% 96%;
+    --accent-foreground: 24 9.8% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 8 82% 92%;
+    --input: 8 82% 92%;
+    --ring: 9 99% 67%;
+    --radius: 0.5rem;
+    /* --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%; */
+  }
+
+  .dark {
+    --background: 237 22% 20%;
+    --foreground: 60 9.1% 97.8%;
+    --card: 240 19% 16%;
+    --card-foreground: 300 0% 100%;
+    --popover: 20 14.3% 4.1%;
+    --popover-foreground: 60 9.1% 97.8%;
+    --primary: 8 99% 67%;
+    --primary-foreground: 300 0% 100%;
+    --secondary: 240 19% 16%;
+    --secondary-foreground: 300 0% 100%;
+    --tertiary: 237 22% 20%;
+    --muted: 12 6.5% 15.1%;
+    --muted-foreground: 237 13% 63%;
+    --accent: 240 19% 16%;
+    --accent-foreground: 300 0% 100%;
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 237 22% 23%;
+    --input: 237 22% 23%;
+    --ring: 8 99% 67%;
+    /* --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%; */
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.h1 {
+  @apply text-6xl xl:text-[72px] xl:leading-[80px] tracking-[-2px] font-bold;
+}
+
+.h2 {
+  @apply text-4xl font-bold;
+}
+
+.h3 {
+  @apply text-3xl font-bold;
+}
+
+.h4 {
+  @apply text-[22px] font-semibold;
+}
+
+.subtitle {
+  @apply text-muted-foreground text-lg mb-8 font-light;
+}
+
+.section-title {
+  @apply text-4xl font-bold relative w-max flex items-center justify-between gap-x-3 before:bg-dots_light before:dark:bg-dots_dark before:bg-no-repeat before:bg-center before:w-[24px] before:h-[24px];
+}
+
+.badge {
+  @apply z-10 w-[200px] h-[68px] bg-white dark:backdrop-blur-[44px] shadow-2xl p-4 rounded-[10px] flex items-center gap-x-4;
+}
+
+.swiper-horizontal > .section-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  @apply bg-primary;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(0);
   }
+  1% {
+    transform: rotate(15deg);
+  }
+  3% {
+    transform: rotate(-13deg);
+  }
+  5% {
+    transform: rotate(17deg);
+  }
+  7% {
+    transform: rotate(-16deg);
+  }
+  9% {
+    transform: rotate(15deg);
+  }
+  11% {
+    transform: rotate(-14deg);
+  }
+  13% {
+    transform: rotate(13deg);
+  }
+  15% {
+    transform: rotate(-12deg);
+  }
+  17% {
+    transform: rotate(11deg);
+  }
+  19% {
+    transform: rotate(-10deg);
+  }
+  21% {
+    transform: rotate(9deg);
+  }
+  23% {
+    transform: rotate(-8deg);
+  }
+  25% {
+    transform: rotate(7deg);
+  }
+  27% {
+    transform: rotate(-6deg);
+  }
+  29% {
+    transform: rotate(5deg);
+  }
+  31% {
+    transform: rotate(-4deg);
+  }
+  33% {
+    transform: rotate(3deg);
+  }
+  35% {
+    transform: rotate(-2deg);
+  }
+  37% {
+    transform: rotate(1deg);
+  }
+  39% {
+    transform: rotate(-1deg);
+  }
+  41% {
+    transform: rotate(1deg);
+  }
+  43% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
+.animate-shake {
+  animation: shake 4s 0.7s ease-in-out infinite;
+}
+
+@keyframes scaleDown {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animation-scale {
+  animation: scaleDown 0.5s ease-in-out;
 }
